--- a/src/templates/stats.html
+++ b/src/templates/stats.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Annotation Statistics</title>
+    <title>Statistics</title>
 </head>
 <body>
     <h1>Annotation Statistics</h1>
