--- a/src/templates/neighbourhood.html
+++ b/src/templates/neighbourhood.html
@@ -13,10 +13,27 @@
     </form>
 
     {% if term %}
-        <h2>Term: {{ term.ID }} - {{ term.name }}</h2>
-        <p><strong>Parents:</strong> {{ parents | join(', ') if parents else 'None' }}</p>
-        <p><strong>Children:</strong> {{ children | join(', ') if children else 'None' }}</p>
-        <p><strong>Siblings:</strong> {{ siblings | join(', ') if siblings else 'None' }}</p>
+        <h2>GO Term: {{ term.ID }} - {{ term.name }}</h2>
+
+        <ul>
+            {% for parent in parents %}
+                <li>Parent: {{ parent }}</li>
+            {% endfor %}
+            <li>Term: {{ term.ID }}
+                <ul>
+                    {% for child in children %}
+                        <li>Child: {{ child }}</li>
+                    {% endfor %}
+                </ul>
+            </li>
+            <li>Siblings:
+                <ul>
+                    {% for sibling in siblings %}
+                        <li>{{ sibling }}</li>
+                    {% endfor %}
+                </ul>
+            </li>
+        </ul>
     {% elif term_id %}
         <p>Invalid GO term ID: {{ term_id }}</p>
     {% endif %}
