--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,5 +21,9 @@
 
     <h2>Analysis</h2>
     <a href="/stats">View Annotation Statistics</a>
+
+    <h2>Ontology Neighbourhood</h2>
+    <a href="/neighbourhood">Explore GO Neighbourhood</a>
+
 </body>
 </html>
