--- a/src/templates/compare.html
+++ b/src/templates/compare.html
@@ -20,6 +20,7 @@
     <ul>
         <li>Same namespace: {{ result.same_namespace }}</li>
         <li>Semantic similarity score: {{ result.semantic_similarity }}</li>
+        <li>Evidence similarity: {{ result.evidence_similarity }}</li>
     </ul>
 {% endif %}
 
