--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,5 +25,8 @@
     <h2>Ontology Neighbourhood</h2>
     <a href="/neighbourhood">Explore GO Neighbourhood</a>
 
+    <h2>Matrix-Based View</h2>
+    <a href="/matrix">View Gene × GO Term Annotation Matrix</a>
+
 </body>
 </html>
