--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,9 +24,9 @@
 
     <h2>Ontology Neighbourhood</h2>
     <a href="/neighbourhood">Explore GO Neighbourhood</a>
-
-    <h2>Matrix-Based View</h2>
-    <a href="/matrix">View Gene × GO Term Annotation Matrix</a>
+    
+    <h2>Statistical Matrix View</h2>
+    <a href="/matrix_stats">View GO Term Statistics Matrix</a>
 
 </body>
 </html>
