--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -18,15 +18,12 @@
         <input type="text" name="go2" placeholder="GO:0009987" required>
         <button type="submit">Compare</button>
     </form>
-
+    
     <h2>Analysis</h2>
-    <a href="/stats">View Annotation Statistics</a>
+    <a href="/stats">Search GO Term Statistics (Matrix View)</a>
 
     <h2>Ontology Neighbourhood</h2>
     <a href="/neighbourhood">Explore GO Neighbourhood</a>
-    
-    <h2>Statistical Matrix View</h2>
-    <a href="/matrix_stats">View GO Term Statistics Matrix</a>
 
 </body>
 </html>
